Review Request 4997 -Header Model Name in Details now no wrap, ellipsis overflow -Fixed jumpy Jobs, Enrichments, and Field Mapping page loads -Buttons now feel a bit more responsive

--- a/le-ui/projects/common/assets/sass/_buttons.scss
+++ b/le-ui/projects/common/assets/sass/_buttons.scss
@@ -20,43 +20,48 @@ Buttons
 ============================================================ */
 button.button, a.button, .button {
 	display: inline-block;
-  padding: 0.8em;
-  margin-bottom: 0;
-  font-family: 'ProximaNova-Regular',Arial,sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  color: $pearl-white;
-  text-transform: uppercase;
-  border-radius: 5px;
-  font-weight: bold;
+	padding: 0.8em;
+	margin-bottom: 0;
+	font-family: 'ProximaNova-Regular',Arial,sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	color: $pearl-white;
+	text-transform: uppercase;
+	border-radius: 5px;
+	font-weight: bold;
+	transition: all 200ms ease;
   
-  &.link-button {
-  	display: inline;
-  	padding: 0;
-  	margin: 0;
-  	border: none;
-  	background: none;
-  }
-  &.close-button {
-  	float: right;
-  }
-  &.default-button {
-    border: $black-titanium solid 1px;
-  }
-  &.blue-button {
+	&:hover {
+		transition: none;
+	}
+ 
+	&.link-button {
+		display: inline;
+		padding: 0;
+		margin: 0;
+		border: none;
+		background: none;
+	}
+	&.close-button {
+		float: right;
+	}
+	&.default-button {
+		border: $black-titanium solid 1px;
+	}
+	&.blue-button {
 		background-color: $saphire;
 		&:hover {
 			background-color: $saphire-two;
@@ -65,20 +70,20 @@ button.button, a.button, .button {
 			background-color: $saphire-three;
 		}
 	}
-  &.orange-button {
+	&.orange-button {
 		background-color: $amber;
 		&:hover {
 			background-color: $amber-two;
-      color: $pearl-white;
+			color: $pearl-white;
 		}
 		&:active {
 			background-color: $amber-three;
 		}
-    &:focus {
-      color: $pearl-white; 
-    }
+		&:focus {
+			color: $pearl-white; 
+		}
 	}
-  &.white-button {
+	&.white-button {
 		color: $black-titanium;
 		background-color: $pearl-white;
 		border-color: $silver;
@@ -89,12 +94,12 @@ button.button, a.button, .button {
 			background-color: $palladium;
 		}
 	}
-  &.gray-button {
+  	&.gray-button {
 		color: $black;
 		background-color: $white-gold;
-    border-color: $silver;
-    border-size: 1px;
-    border-style: solid;
+		border-color: $silver;
+		border-size: 1px;
+		border-style: solid;
 		&:hover {
 			background-color: $palladium;
 		}
@@ -102,30 +107,30 @@ button.button, a.button, .button {
 			background-color: $palladium;
 		}
 	}
-  &.light-gray-button {
-    color: $silver;
-    background-color: $black-titanium;
-    &:hover {
-      background-color: $onyx;
-    }
-    &:active {
-      background-color: $jet;
-    }
-  }
-  &.block-button {
-    display: block;
-    width: 100%;
-  }
+	&.light-gray-button {
+		color: $silver;
+		background-color: $black-titanium;
+		&:hover {
+			background-color: $onyx;
+		}
+		&:active {
+			background-color: $jet;
+		}
+	}
+	&.block-button {
+		display: block;
+		width: 100%;
+	}
 	@include media(">medium") {
-    display: inline-block;
-    padding: 0.85em 3em 0.8em;
-    &.icon-button {
-    	padding: 0.75em 1.5em;
-    }
-    &.dropdown-toggle {
-        padding: 0.75em;
-    }
-  }
+		display: inline-block;
+		padding: 0.85em 3em 0.8em;
+		&.icon-button {
+			padding: 0.75em 1.5em;
+		}
+		&.dropdown-toggle {
+			padding: 0.75em;
+		}
+	}
 }
 
 button,
