--- a/le-ui/projects/leadprioritization/assets/styles/style.scss
+++ b/le-ui/projects/leadprioritization/assets/styles/style.scss
@@ -203,6 +203,7 @@ Grid
 Header
 ================================================================ */
 header {
+    position: relative;
     box-shadow: 0px 0px 0px 1px rgb(180,180,180);
 }
     .header-wrap {
